--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Projeto do Leandro</title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
-	Ola mundo 2
-</body>
-</html>
+ <html>
+    <head>
+      <title>Proposta um para site da empresa</title>
+      <link rel="stylesheet" type="text/css" href="estilo.css">
+    </head>
+    <body>
+      <h1>Cabeçalho do sistema</h1>
+
+	  <main>
+	sda	Aqui está o conteúdo da página
+      </main>
+  
+      <h1>Rodapé do sistema</h1>
+    </body>
+  </html>
