Realmente iniciando o design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Projeto do Leandro</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body>
 	Ola mundo 2
